deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  labels:
    app: dotnet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet
  template:
    metadata:
      labels:
        app: dotnet
    spec:
      containers:
      - name: dotnet-demo-app
        image: naveen9182/dotnetapp:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: pvt-registry
