service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: dotnet-demo-service
spec:
  selector:    
    app: dotnet
  type: LoadBalancer
  ports:  
  - name: http
    port: 80
    targetPort: 80
