ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dotnet-ingress
spec:
  rules:
  - host: 13.233.110.56
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
             name: dotnet-demo-service
             port:
               number: 80
